--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"author": "Adrian Shepelavey",
 	"name": "fcc-learn-npm-package-json",
 	"description": "A project that I hope FCC accepts as valid",
+  "keywords": [ "freecodecamp", "example", "words" ],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
