--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
 	"version": "1.2",
 	"dependencies": {
-		"express": "^4.14.0"
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
