--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
 	"version": "1.2",
 	"dependencies": {
-		"moment": "~> 2.19.3"
+		"moment": "~2.19.3"
 	},
 	"main": "server.js",
 	"scripts": {
