--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
 	"description": "A project that I hope FCC accepts as valid",
   "keywords": [ "freecodecamp", "example", "words" ],
   "license": "MIT",
-	"version": "1.2",
-	"dependencies": {
-		"moment": "^2.19.3"
+	"version": "1.2"
 	},
 	"main": "server.js",
 	"scripts": {
